[package]
name = "gpui-standalone"
version = "1.5.3"
authors = ["Nathan Sobo <nathan@zed.dev>"]
description = "Zed's GPU-accelerated UI framework"
repository = "https://github.com/zed-industries/zed"
license = "Apache-2.0"
homepage = "https://gpui.rs"
readme = "README.md"
keywords = ["desktop", "gui", "immediate"]
categories = ["gui"]
edition = "2024"


[features]
default = ["font-kit", "wayland", "x11", "windows-manifest"]
test-support = ["leak-detection", "collections/test-support", "http_client/test-support", "wayland", "x11"]
inspector = ["gpui_macros/inspector"]
leak-detection = ["backtrace"]
wayland = ["bitflags"]
x11 = ["scap?/x11"]
screen-capture = ["scap"]
windows-manifest = ["dep:embed-resource"]
input-latency-histogram = ["dep:hdrhistogram"]

[lib]
path = "src/gpui.rs"
doctest = false
name = "gpui"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "move_entity_between_windows"
path = "examples/move_entity_between_windows.rs"

[[example]]
name = "image"
path = "examples/image/image.rs"

[[example]]
name = "input"
path = "examples/input.rs"

[[example]]
name = "on_window_close_quit"
path = "examples/on_window_close_quit.rs"

[[example]]
name = "opacity"
path = "examples/opacity.rs"

[[example]]
name = "pattern"
path = "examples/pattern.rs"

[[example]]
name = "set_menus"
path = "examples/set_menus.rs"

[[example]]
name = "shadow"
path = "examples/shadow.rs"

[[example]]
name = "svg"
path = "examples/svg/svg.rs"

[[example]]
name = "tab_stop"
path = "examples/tab_stop.rs"

[[example]]
name = "text"
path = "examples/text.rs"

[[example]]
name = "text_wrapper"
path = "examples/text_wrapper.rs"

[[example]]
name = "tree"
path = "examples/tree.rs"

[[example]]
name = "uniform_list"
path = "examples/uniform_list.rs"

[[example]]
name = "window_shadow"
path = "examples/window_shadow.rs"

[[example]]
name = "grid_layout"
path = "examples/grid_layout.rs"

[[example]]
name = "list_example"
path = "examples/list_example.rs"

[[example]]
name = "mouse_pressure"
path = "examples/mouse_pressure.rs"

[dependencies]
anyhow = "^1.0.86"
async-channel = "^2.5.0"
async-task = "^4.7"
backtrace = {version = "^0.3", optional = true}
bitflags = {version = "^2.6.0", optional = true}
chrono = {version = "^0.4", features = ["serde"]}
collections = {package = "collections-gpui-standalone", version = "1.5.3"}
ctor = "^1.0.6"
derive_more = {version = "^2.1.1", features = ["add", "add_assign", "deref", "deref_mut", "display", "from_str", "mul", "mul_assign", "not"]}
etagere = "^0.2"
futures = "^0.3.32"
futures-concurrency = "^7.7.1"
gpui_macros = {package = "gpui_macros-gpui-standalone", version = "1.5.3"}
gpui_shared_string = {package = "gpui_shared_string-gpui-standalone", version = "1.5.3"}
gpui_util = {package = "gpui_util-gpui-standalone", version = "1.5.3"}
hdrhistogram = {version = "^7", optional = true}
http_client = {package = "http_client-gpui-standalone", version = "1.5.3"}
image = "^0.25.1"
inventory = "^0.3.19"
itertools = "^0.14.0"
log = {version = "^0.4.16", features = ["kv_unstable_serde", "serde"]}
lyon = "^1.0"
num_cpus = "^1.13"
parking = "^2.0.0"
parking_lot = "^0.12.1"
pin-project = "^1.1.10"
pollster = "^0.4.0"
postage = {version = "^0.5", features = ["futures-traits"]}
profiling = "^1"
rand = "^0.9"
raw-window-handle = "^0.6"
refineable = {package = "refineable-gpui-standalone", version = "1.5.3"}
regex = "^1.5"
resvg = {version = "^0.45.0", default-features = false, features = ["text", "system-fonts", "memmap-fonts", "raster-images"]}
scheduler = {package = "scheduler-gpui-standalone", version = "1.5.3"}
schemars = {version = "^1.0", features = ["indexmap2"]}
seahash = "^4.1"
serde = {version = "^1.0.221", features = ["derive", "rc"]}
serde_json = {version = "^1.0.144", features = ["preserve_order", "raw_value"]}
slotmap = "^1.0.6"
smallvec = {version = "^1.6", features = ["union", "const_new"]}
spin = "^0.10.0"
stacksafe = "^0.1"
strum = {version = "^0.27.2", features = ["derive"]}
sum_tree = {package = "sum_tree-gpui-standalone", version = "1.5.3"}
taffy = "=0.10.1"
thiserror = "^2.0.12"
ttf-parser = "^0.25"
url = "^2.2"
usvg = {version = "^0.45.0", default-features = false}
util_macros = {package = "util_macros-gpui-standalone", version = "1.5.3"}
uuid = {version = "^1.1.2", features = ["v4", "v5", "v7", "serde"]}
waker-fn = "^1.2.0"
web-time = "^1.1.0"

[build-dependencies]
embed-resource = {version = "^3.0", optional = true}

[target."cfg(any(target_os = \"linux\", target_os = \"freebsd\", target_os = \"macos\"))".dependencies]
pathfinder_geometry = "^0.5"

[target."cfg(any(target_os = \"linux\", target_os = \"freebsd\", target_os = \"windows\"))".dependencies]
scap = {version = "^0.0.8-zed", package = "zed-scap", default-features = false, optional = true}

[target."cfg(target_family = \"wasm\")".dependencies]
getrandom = {version = "^0.3.4", features = ["wasm_js"]}
uuid = {version = "^1.1.2", features = ["v4", "v5", "v7", "serde", "js"]}

[target."cfg(target_os = \"macos\")".dependencies]
block = "^0.1"
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
core-foundation = "=0.10.0"
core-foundation-sys = "^0.8.6"
core-graphics = "^0.24"
core-text = "^21"
core-video = {version = "^0.5.2", features = ["metal"]}
font-kit = {version = "^0.14.1-zed", package = "zed-font-kit", optional = true}
foreign-types = "^0.5"
log = {version = "^0.4.16", features = ["kv_unstable_serde", "serde"]}
mach2 = "^0.5"
media = {package = "media-gpui-standalone", version = "1.5.3"}
metal = "^0.33"
objc = "^0.2"
objc2 = {version = "^0.6", optional = true}
objc2-metal = {version = "^0.3", optional = true}

[target."cfg(target_os = \"macos\")".build-dependencies]
bindgen = "^0.71"
cbindgen = {version = "^0.28.0", default-features = false}

[target."cfg(target_os = \"windows\")".dependencies]
windows = {version = "^0.61", features = ["Win32_Foundation"]}
